# basechess

./: .gitignore  BaseChessConfig.cmake  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/CHESS-CLI/: CMakeLists.txt  main.cpp
include/BaseChess/: Board.hpp  Chess.hpp  ImplBoard.hpp  ImplMove.hpp  Move.hpp  Position.hpp
include/BaseChess/Piece/: Enums.hpp  MovablePiece.hpp  Piece.hpp  Pieces.hpp
include/BaseChess/Piece/Pieces/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rook.hpp
src/: Chess.cpp  ImplBoard.cpp  ImplMove.cpp  Position.cpp
src/Piece/: MovablePiece.cpp  Piece.cpp
src/Piece/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
